fix(1253): remove `z-index` and rely on `initial` (#1270)
otherwise consecutive `iconWithOptions` dropdowns are shown below the
icon but it should be other way around

--- a/src/IconWithOptions/IconWithOptions.scss
+++ b/src/IconWithOptions/IconWithOptions.scss
@@ -4,7 +4,6 @@
   position: relative;
   display: flex;
   justify-content: center;
-  z-index: 0;
 
   &.hover .icon-wrapper {
     svg path {
